# ITMO_ICT_WebDevelopment_2023-2024

./: .gitignore  404.html  README.md  db.sqlite3  index.html  lab3.md  lab4.md  manage.py  package-lock.json  package.json  requrements.txt  search.html  sqlite3  task_1_client.py  task_1_serv.py  task_2_client.py  task_2_serv.py  task_3_client.py  task_3_serv.py  task_4_client2.py  task_4_serv.py  ~$клад принципы ООП.docx  доклад принципы ООП.docx
students/K32402/practical_works/Ekushev_Vlad/simple_django_web_project/: manage.py  pyproject.toml
students/K32402/practical_works/Ekushev_Vlad/simple_django_web_project/cars_rent/: admin.py  forms.py  models.py  urls.py  views.py
students/K32402/practical_works/Ekushev_Vlad/simple_django_web_project/django_project_ekushev/: asgi.py  settings.py  urls.py  wsgi.py
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/: mkdocs.yml  pyproject.toml
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/docs/: task_1.md  task_2.md  task_3.md  task_4.md  task_5.md
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/task_1/: client.py  server.py
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/task_2/: client.py  server.py
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/task_3/: index.html  server.py
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/task_4/: client.py  server.py
students/K33392/laboratory_works/stukalov_artem/laboratory_work_1/task_5/: server.py
students/K33392/laboratory_works/stukalov_artem/laboratory_work_3/: pyproject.toml
students/K33392/laboratory_works/stukalov_artem/laboratory_work_3/laboratory_work_3/: settings.py  urls.py  (+1 more)
students/K33392/practical_works/stukalov_artem/simple_drf_project/: pyproject.toml
(+5967 files in other folders)
