[tool.poetry]
name = "simple-django-web-project"
version = "0.1.0"
description = ""
authors = ["jarvis394 <tarnatovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
