[tool.poetry]
name = "lab-1"
version = "0.1.0"
description = ""
authors = ["TUTOR03 <stukalov.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.1"
mkdocs = "^1.5.2"
mkdocstrings = "^0.23.0"
mkdocs-material = "^9.3.1"
mkdocstrings-python = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
